# goreutils

./: .gitignore  Cargo.toml  i love you  readme.md
src/: args.rs  lib.rs  list.rs  rng.rs  util.rs
