[package]
name = "goreutils"
version = "0.1.0"
edition = "2024"

description = "Let's spice up terminal life a little!"

license-file = "license"
readme = "readme.md"
repository = "https://github.com/wainggan/goreutils"

[dependencies]
argv = "0.1.13"
getrandom = "0.3.3"
prrng = "0.4.0"
salps = "1.0.0"

[profile.release]
lto = true

[profile.release-fast]
inherits = "release"
panic = "abort"

[profile.release-smol]
inherits = "release"
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true

